Fix aspect ratio causing cropping on deal images

--- a/resources/assets/sass/components/deal.scss
+++ b/resources/assets/sass/components/deal.scss
@@ -65,15 +65,17 @@
         font-size: 1.15rem;
     }
 
+    &__image-container {
+        height: 225px;
+        display: flex;
+        align-items: center;
+    }
+
     &__image {
         border-bottom: 0;
         display: block;
         width: 100%;
         object-fit: cover;
-
-        @media (min-width: $break-small) {
-            height: 225px;
-        }
 
         &--fallback {
             padding: 25px;
